--- a/followAlong/views/login.ejs
+++ b/followAlong/views/login.ejs
@@ -1,4 +1,4 @@
-<% layout('/layouts/boilerplate') %> 
+<% layout('/layouts/boilerplate') %>
     <h1>Login</h1>
     <form action="/login" method="POST">
         <div>
@@ -9,5 +9,5 @@
             <label for="password">Enter Password</label>
             <input type="password" placeholder="Password" id="password" name="user[password]">
         </div>
-        <button class="submit">Submit</button>
+        <button class="btn">Submit</button>
     </form>
