--- a/followAlong/views/partials/footer.ejs
+++ b/followAlong/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
         <ul class="footer-link-container">
             <li class="footer-link"><a href="">Contact</a></li>
-            <li class="footer-link"><a href="">Copyright</a></li>
+            <li class="footer-link"><a href="">Copyright  &copy;</a></li>
         </ul>
 </footer>
