--- a/followAlong/public/styles.css
+++ b/followAlong/public/styles.css
@@ -5,40 +5,9 @@
     font-family: 'Lato', sans-serif;
 }
 body {
-    height: 100vh;
-}
-form {
-    width: 50%;
-    margin: auto;
-    /* text-align: center; */
-}
-form label {
-    display: block;
-    width: 100%;
-    margin: .5rem;
-}
-form input {
-    display: block;
-    width: 100%;
-    min-height: 2.3rem;
-    margin: .5rem;
-    padding: .5rem;
-    font-size: 1rem;
-}
-form button {
-    width: 100%;
-    margin: 1rem .5rem;
-    padding: 1rem;
-    border: none;
-    background-color: #14213d;
-    color: aliceblue;
-    font-size: 1rem;
-    border-radius: 5px;
-    transition: .2s ease-in;
-}
-form button:hover {
-    opacity: .9;
-    cursor: pointer;
+    height: 150vh;
+    display: flex;
+    flex-direction: column;
 }
 a {
     text-decoration: none;
@@ -53,6 +22,28 @@ p {
     margin: 1rem 0;
 }
 
+form {
+    width: 50%;
+    margin: 1.5rem auto;
+}
+form label {
+    display: block;
+    width: 100%;
+    margin: 0 .5rem;
+}
+form input {
+    font-size: 1rem;
+    width: 100%;
+    margin: .5rem;
+    padding: .5rem;
+    min-height: 2.3rem;
+    display: block;
+}
+form button:hover {
+    background-color: #04121f;
+    cursor: pointer;
+}
+
 .navbar {
     width: 100%;
     min-height: 60px;
@@ -64,19 +55,38 @@ p {
 }
 .footer {
     width: 100%;
-    min-height: 60px;
-    padding: 1.5rem;
+    min-height: 100px;
+    margin-top: auto;
+    padding: .5rem .5rem;
     background-color: #14213d;
-    position: absolute;
-    bottom:0;
 }
 
 .link-container {
     display: flex;
     margin-left: auto;
     justify-content: space-evenly;
-    align-items: center;
     flex: 1;
+}
+.btn {
+    font-size: 1rem;
+    color: aliceblue;
+    background-color: #14213d;
+    width: 100%;
+    margin: 1rem .5rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 5px;
+    transition: .2s ease-in;
+}
+.btn-logOut {
+    font-size: 1.2rem;
+    background-color: #14213d;
+    color: aliceblue;
+    border-radius: 5px;
+    border: none;
+    width: 30%;
+    min-height: 2.5rem;
+    transition: .2s ease-in;
 }
 .nav-link {
     font-size: 1.2rem;
@@ -86,7 +96,7 @@ p {
     font-size: 1.5rem;
     color: aliceblue;
 }
-.body {
+.main-body {
     padding: 1.5rem;
 }
 .section {
