--- a/followAlong/views/layouts/boilerplate.ejs
+++ b/followAlong/views/layouts/boilerplate.ejs
@@ -16,11 +16,11 @@
 
 <body>
     <%- include('../partials/navbar') %>
-        <main class="body">
-            <%- body %>
-        </main>
-    <%- include('../partials/footer') %> 
-        <script src=""></script>
+    <main class="main-body">
+        <%- body %>
+    </main>
+    <%- include('../partials/footer') %>
+    <script src=""></script>
 </body>
 
 </html>
