--- a/followAlong/views/partials/navbar.ejs
+++ b/followAlong/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="logo-container">
-        <a href="#" class="logo">Home</a>
+        <a href="/" class="logo">Home</a>
     </div>
     <ul class="link-container">
         <li><a href="/secret" class="nav-link">Secret Page</a></li>
