--- a/followAlong/views/register.ejs
+++ b/followAlong/views/register.ejs
@@ -9,5 +9,5 @@
             <label for="password">Enter Password</label>
             <input type="password" placeholder="Password" id="password" name="user[password]">
         </div>
-        <button class="submit">Submit</button>
+        <button class="btn">Submit</button>
     </form>
