Updated files and added a solution to the exercise

--- a/solution/views/register.ejs
+++ b/solution/views/register.ejs
@@ -1,7 +1,6 @@
-<% layout('/layouts/boilerplate') %>
-    <h1>Login</h1>
-    <%= errors %> 
-    <form action="/login" method="POST">
+<% layout('/layouts/boilerplate') %> 
+    <h1>Sign Up</h1>
+    <form action="/register" method="POST">
         <div>
             <label for="user">Enter Username</label>
             <input type="text" placeholder="Username" id="user" name="user[username]">
